--- a/Data.Models/Data.Models.csproj
+++ b/Data.Models/Data.Models.csproj
@@ -40,8 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Address\Contact.cs" />
+    <Compile Include="Address\Address.cs" />
     <Compile Include="Base\BaseData.cs" />
     <Compile Include="Common\Enumerations.cs" />
+    <Compile Include="Company\Company.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users\User.cs">
       <SubType>
