--- a/LoanManagementSystem/Web.config
+++ b/LoanManagementSystem/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>    
-    <add name="LoanDBContext" connectionString="Data Source=SHIBIN\SQLEXPRESS;Initial Catalog=LoanManagement;Integrated Security=True;"
+    <add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement;Integrated Security=True;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
