--- a/LoanManagementSystem/LoanManagementSystem.csproj
+++ b/LoanManagementSystem/LoanManagementSystem.csproj
@@ -169,13 +169,14 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\AccountHeadsController.cs" />
-    <Compile Include="Controllers\AccountTypesController.cs" />
+    <Compile Include="Controllers\Settings\AccountHeadsController.cs" />
+    <Compile Include="Controllers\Settings\AccountTypesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\ScheduleSettingsController.cs" />
+    <Compile Include="Controllers\Settings\ScheduleSettingsController.cs" />
+    <Compile Include="Controllers\Settings\AccountBookTypesController.cs" />
     <Compile Include="Controllers\UserController.cs" />
-    <Compile Include="Controllers\UserGroupController.cs" />
+    <Compile Include="Controllers\Settings\UserGroupController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -288,6 +289,11 @@
     <Content Include="Views\AccountHeads\Details.cshtml" />
     <Content Include="Views\AccountHeads\Edit.cshtml" />
     <Content Include="Views\AccountHeads\Index.cshtml" />
+    <Content Include="Views\AccountBookTypes\Create.cshtml" />
+    <Content Include="Views\AccountBookTypes\Delete.cshtml" />
+    <Content Include="Views\AccountBookTypes\Details.cshtml" />
+    <Content Include="Views\AccountBookTypes\Edit.cshtml" />
+    <Content Include="Views\AccountBookTypes\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
