--- a/Data.Models/Data.Models.csproj
+++ b/Data.Models/Data.Models.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Address\Address.cs" />
     <Compile Include="Base\BaseData.cs" />
     <Compile Include="Settings\sdtoSettings.cs" />
+    <Compile Include="SysBase\sdtoUrlInfo.cs" />
     <Compile Include="SysBase\Tree\Tree.cs" />
     <Compile Include="SysBase\Tree\TreeNode.cs" />
     <Compile Include="Common\Enumerations.cs" />
