--- a/LoanManagementSystem/LoanManagementSystem.csproj
+++ b/LoanManagementSystem/LoanManagementSystem.csproj
@@ -170,6 +170,9 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CompanyController.cs" />
+    <Compile Include="Controllers\ExecutiveController.cs" />
+    <Compile Include="Controllers\MemberController.cs" />
     <Compile Include="Controllers\Settings\AccountBooksController.cs" />
     <Compile Include="Controllers\Settings\AccountHeadsController.cs" />
     <Compile Include="Controllers\Settings\AccountTypesController.cs" />
@@ -385,11 +388,6 @@
     <Content Include="Views\User\Details.cshtml" />
     <Content Include="Views\User\Edit.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
-    <Content Include="Views\UserGroups\Create.cshtml" />
-    <Content Include="Views\UserGroups\Delete.cshtml" />
-    <Content Include="Views\UserGroups\Details.cshtml" />
-    <Content Include="Views\UserGroups\Edit.cshtml" />
-    <Content Include="Views\UserGroups\Index.cshtml" />
     <Content Include="Views\ScheduleSettings\Create.cshtml" />
     <Content Include="Views\ScheduleSettings\Delete.cshtml" />
     <Content Include="Views\ScheduleSettings\Details.cshtml" />
@@ -427,6 +425,26 @@
     <Content Include="Views\Menu\Edit.cshtml" />
     <Content Include="Views\Menu\Index.cshtml" />
     <Content Include="Views\Shared\MenuView.cshtml" />
+    <Content Include="Views\Company\Create.cshtml" />
+    <Content Include="Views\Company\Delete.cshtml" />
+    <Content Include="Views\Company\Details.cshtml" />
+    <Content Include="Views\Company\Edit.cshtml" />
+    <Content Include="Views\Company\Index.cshtml" />
+    <Content Include="Views\Executive\Create.cshtml" />
+    <Content Include="Views\Executive\Delete.cshtml" />
+    <Content Include="Views\Executive\Details.cshtml" />
+    <Content Include="Views\Executive\Edit.cshtml" />
+    <Content Include="Views\Executive\Index.cshtml" />
+    <Content Include="Views\Member\Create.cshtml" />
+    <Content Include="Views\Member\Delete.cshtml" />
+    <Content Include="Views\Member\Details.cshtml" />
+    <Content Include="Views\Member\Edit.cshtml" />
+    <Content Include="Views\Member\Index.cshtml" />
+    <Content Include="Views\UserGroup\Create.cshtml" />
+    <Content Include="Views\UserGroup\Delete.cshtml" />
+    <Content Include="Views\UserGroup\Details.cshtml" />
+    <Content Include="Views\UserGroup\Edit.cshtml" />
+    <Content Include="Views\UserGroup\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
