--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Base\bfBase.cs" />
     <Compile Include="Base\LoanDBContext.cs" />
+    <Compile Include="Base\LoanDBInitializer.cs" />
     <Compile Include="Company\bfCompany.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SysBase\Tree\bfTree.cs" />
