--- a/LoanManagementSystem/Web.config
+++ b/LoanManagementSystem/Web.config
@@ -8,7 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>    
+  <connectionStrings>
     <add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -18,14 +18,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <authentication mode="Forms" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
-    <modules>
+    <!--<modules>
       <remove name="FormsAuthentication" />
-    </modules>
+    </modules>-->
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
