--- a/LoanManagementSystem/Web.config
+++ b/LoanManagementSystem/Web.config
@@ -18,7 +18,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <authentication mode="Forms" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/User/Login" defaultUrl="~/Home"></forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
