--- a/LoanManagementSystem/Web.config
+++ b/LoanManagementSystem/Web.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
+    <add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement;Integrated Security=false;User ID=sa;Password=saat1234"
+    providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -28,6 +30,11 @@
     <!--<modules>
       <remove name="FormsAuthentication" />
     </modules>-->
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <!-- In case IIS already has this mime type -->
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+    </staticContent>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
