--- a/UtilityHelper/UtilityHelper.csproj
+++ b/UtilityHelper/UtilityHelper.csproj
@@ -43,6 +43,7 @@
     <Compile Include="UserSession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UtilityBase.cs" />
+    <Compile Include="UtilityHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
