--- a/LoanManagementSystem/LoanManagementSystem.csproj
+++ b/LoanManagementSystem/LoanManagementSystem.csproj
@@ -174,6 +174,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Deposit\DepositController.cs" />
+    <Compile Include="Controllers\Reports\ReportsController.cs" />
     <Compile Include="Controllers\User\CompanyController.cs" />
     <Compile Include="Controllers\User\ExecutiveController.cs" />
     <Compile Include="Controllers\User\MemberController.cs" />
@@ -835,6 +836,7 @@
     <Content Include="Views\Deposit\Edit.cshtml" />
     <Content Include="Views\Deposit\Withdrawals.cshtml" />
     <Content Include="Views\Deposit\WithdrawAmount.cshtml" />
+    <Content Include="Views\Reports\LoanSummary.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
