--- a/LoanManagementSystem/LoanManagementSystem.csproj
+++ b/LoanManagementSystem/LoanManagementSystem.csproj
@@ -837,6 +837,7 @@
     <Content Include="Views\Deposit\Withdrawals.cshtml" />
     <Content Include="Views\Deposit\WithdrawAmount.cshtml" />
     <Content Include="Views\Reports\LoanSummary.cshtml" />
+    <Content Include="Views\Reports\DepositSummary.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
