--- a/LoanManagementSystem/LoanManagementSystem.csproj
+++ b/LoanManagementSystem/LoanManagementSystem.csproj
@@ -838,6 +838,7 @@
     <Content Include="Views\Deposit\WithdrawAmount.cshtml" />
     <Content Include="Views\Reports\LoanSummary.cshtml" />
     <Content Include="Views\Reports\DepositSummary.cshtml" />
+    <Content Include="Views\Loan\ExportView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
