--- a/LoanManagementSystem/Web.config
+++ b/LoanManagementSystem/Web.config
@@ -10,8 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
-    <add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement;Integrated Security=false;User ID=sa;Password=saat1234"
-    providerName="System.Data.SqlClient" />
+    <add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement;Integrated Security=false;User ID=sa;Password=saat1234" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
