--- a/LoanManagementSystem/packages.config
+++ b/LoanManagementSystem/packages.config
@@ -29,6 +29,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="MvcCheckBoxList" version="1.4.4.5" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
