--- a/LoanManagementSystem/Web.config
+++ b/LoanManagementSystem/Web.config
@@ -17,6 +17,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="RecreateDatabaseOnChange" value="false"/>
+    <add key="DbUserName" value="sa"/>
+    <add key="DbPassword" value="saat1234"/>
   </appSettings>
   <system.web>
     <authentication mode="Forms">
