--- a/LoanManagementSystem/Web.config
+++ b/LoanManagementSystem/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
-    <add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement;Integrated Security=false;User ID=sa;Password=saat1234" providerName="System.Data.SqlClient" />
+    <add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement03;Integrated Security=false;User ID=sa;Password=saat1234" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -23,7 +23,7 @@
   </appSettings>
   <system.web>
     <authentication mode="Forms">
-      <forms loginUrl="~/User/Login" defaultUrl="~/Home"></forms>
+      <forms loginUrl="~/Login/Login" defaultUrl="~/Home"></forms>
     </authentication>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
