--- a/LoanManagementSystem/Web.config
+++ b/LoanManagementSystem/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
-    <add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement03;Integrated Security=false;User ID=sa;Password=saat1234" providerName="System.Data.SqlClient" />
+    <add name="LoanDBContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=LoanManagement03;Integrated Security=false;User ID=sa;Password=saat1234; Connection Timeout=180" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -98,4 +98,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="2147483644"/>
+      </webServices>
+    </scripting>
+  </system.web.extensions>
 </configuration>
