--- a/Data.Models/Data.Models.csproj
+++ b/Data.Models/Data.Models.csproj
@@ -78,10 +78,13 @@
     <Compile Include="Address\State.cs" />
     <Compile Include="Address\Country.cs" />
     <Compile Include="Base\BaseData.cs" />
+    <Compile Include="Base\CustomValidationMutualExclude.cs" />
     <Compile Include="Common\sdtoSysCode.cs" />
     <Compile Include="Deposit\sdtoWithdrawalInfo.cs" />
     <Compile Include="Deposit\sdtoDepositInfo.cs" />
+    <Compile Include="Loan\sdtoViewLoanDefaulterDetails.cs" />
     <Compile Include="Loan\sdtoViewLoanRepayment.cs" />
+    <Compile Include="Loan\sdtoViewLoanDefaulters.cs" />
     <Compile Include="Loan\sdtoViewLoanRepayments.cs" />
     <Compile Include="Loan\sdtoLoanRepayment.cs" />
     <Compile Include="Loan\sdtoLoanInfo.cs" />
